--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# Specifies files to intentionally ignore when using Git
-# http://git-scm.com/docs/gitignore
-
 node_modules/
-www/build/
+www/
 platforms/
 plugins/
-*.swp
 .DS_Store
-Thumbs.db
