--- a/package.json
+++ b/package.json
@@ -1,50 +1,39 @@
 {
+  "name": "ionic-hello-world",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "es6-shim": "0.35.1",
-    "ionic-angular": "2.0.0-beta.11",
-    "ionic-native": "1.3.10",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@ionic/storage": "1.1.9",
+    "ionic-angular": "2.1.0",
+    "ionic-native": "2.7.0",
     "ionicons": "3.0.0",
-    "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
-    "three": "^0.80.1",
-    "zone.js": "0.6.12"
+    "rxjs": "5.0.0-beta.12",
+    "sw-toolbox": "3.4.0",
+    "zone.js": "0.6.26",
+    "three": "0.84.0"
   },
   "devDependencies": {
-    "del": "2.2.0",
-    "gulp": "3.9.1",
-    "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "2.0.0",
-    "ionic-gulp-fonts-copy": "^1.0.0",
-    "ionic-gulp-html-copy": "^1.0.0",
-    "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^2.0.0",
-    "ionic-gulp-tslint": "^1.0.0",
-    "tslint-ionic-rules": "0.0.4",
-    "run-sequence": "1.1.5"
+    "@ionic/app-scripts": "1.1.4",
+    "typescript": "2.0.9",
+    "@types/three": "0.83.4"
   },
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
-    }
-  ],
-  "name": "ionic-threejs",
+  "cordovaPlugins": [ ],
+  "cordovaPlatforms": [ ],
   "description": "ionic-threejs: An Ionic project"
 }
