--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "name": "ionic-threejs",
+  "description": "Ionic2 Three.js Custom Component",
+  "version": "0.0.1",
+  "author": "Okode",
+  "homepage": "https://www.okode.com",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.9",
-    "ionic-angular": "2.1.0",
-    "ionic-native": "2.7.0",
+    "@angular/common": "4.1.2",
+    "@angular/compiler": "4.1.2",
+    "@angular/compiler-cli": "4.1.2",
+    "@angular/core": "4.1.2",
+    "@angular/forms": "4.1.2",
+    "@angular/http": "4.1.2",
+    "@angular/platform-browser": "4.1.2",
+    "@angular/platform-browser-dynamic": "4.1.2",
+    "@ionic-native/core": "3.10.2",
+    "@ionic-native/splash-screen": "3.10.2",
+    "@ionic-native/status-bar": "3.10.2",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.6.26",
-    "three": "0.84.0"
+    "rxjs": "5.1.1",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.11",
+    "three": "0.85.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
-    "typescript": "2.0.9",
-    "@types/three": "0.83.4"
-  },
-  "cordovaPlugins": [ ],
-  "cordovaPlatforms": [ ],
-  "description": "ionic-threejs: An Ionic project"
+    "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.2.1",
+    "@ionic/cli-plugin-ionic-angular": "1.2.0",
+    "@types/three": "0.84.8",
+    "typescript": "2.3.3"
+  }
 }
