--- a/package.json
+++ b/package.json
@@ -1,42 +1,65 @@
 {
-  "name": "ionic-threejs",
-  "description": "Ionic2 Three.js Custom Component",
-  "version": "0.0.1",
-  "author": "Okode",
-  "homepage": "https://www.okode.com",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/compiler-cli": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
-    "@ionic-native/core": "3.10.2",
-    "@ionic-native/splash-screen": "3.10.2",
-    "@ionic-native/status-bar": "3.10.2",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.3.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.11",
-    "three": "0.85.2"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.2.1",
-    "@ionic/cli-plugin-ionic-angular": "1.2.0",
-    "@types/three": "0.84.8",
-    "typescript": "2.3.3"
-  }
+    "name": "ionic-threejs",
+    "description": "Ionic2 Three.js Custom Component",
+    "version": "0.0.1",
+    "author": "Okode",
+    "homepage": "https://www.okode.com",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.1.2",
+        "@angular/compiler": "4.1.2",
+        "@angular/compiler-cli": "4.1.2",
+        "@angular/core": "4.1.2",
+        "@angular/forms": "4.1.2",
+        "@angular/http": "4.1.2",
+        "@angular/platform-browser": "4.1.2",
+        "@angular/platform-browser-dynamic": "4.1.2",
+        "@ionic-native/core": "3.10.2",
+        "@ionic-native/splash-screen": "3.10.2",
+        "@ionic-native/status-bar": "3.10.2",
+        "@ionic/storage": "2.0.1",
+        "cordova-ios": "~4.4.0",
+        "cordova-android": "~6.2.3",
+        "cordova-browser": "~4.1.0",
+        "ionic-angular": "3.3.0",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.11",
+        "three": "0.85.2",
+        "cordova-plugin-console": "1.0.7",
+        "cordova-plugin-device": "1.1.6",
+        "cordova-plugin-splashscreen": "4.0.3",
+        "cordova-plugin-statusbar": "2.2.3",
+        "cordova-plugin-whitelist": "1.3.2",
+        "ionic-plugin-keyboard": "2.2.1"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.7",
+        "@ionic/cli-plugin-cordova": "1.2.1",
+        "@ionic/cli-plugin-ionic-angular": "1.2.0",
+        "@types/three": "0.84.8",
+        "typescript": "2.3.3"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "ios",
+            "android"
+        ]
+    }
 }
