Added missing dependency for browser. Updated yarn dependencies.

--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
             "ionic-plugin-keyboard": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "browser",
+            "ios"
         ]
     }
 }
