--- a/package.json
+++ b/package.json
@@ -33,20 +33,19 @@
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.11",
-        "three": "0.85.2",
         "cordova-plugin-console": "1.0.7",
         "cordova-plugin-device": "1.1.6",
         "cordova-plugin-splashscreen": "4.0.3",
         "cordova-plugin-statusbar": "2.2.3",
         "cordova-plugin-whitelist": "1.3.2",
         "ionic-plugin-keyboard": "2.2.1",
-        "cordova-plugin-wkwebview-engine": "https://github.com/driftyco/cordova-plugin-wkwebview-engine.git"
+        "cordova-plugin-wkwebview-engine": "https://github.com/driftyco/cordova-plugin-wkwebview-engine.git",
+        "x3dom": "1.7.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
         "@ionic/cli-plugin-cordova": "1.3.0",
         "@ionic/cli-plugin-ionic-angular": "1.3.0",
-        "@types/three": "0.84.8",
         "typescript": "2.3.4"
     },
     "cordova": {
